compiler/testData/diagnostics/tests/secondaryConstructors/resolvePropertyInitializerWithoutPrimary.fir.kt
class A {
    val prop: Int = <!INITIALIZER_TYPE_MISMATCH!>""<!>
    constructor()
}
